<resources>
    <string name="app_name">Стремления</string>
    <string name="main_target">main_target</string>
    <string name="add_target">add_target</string>
    <string name="list_target">list_target</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cur_target">Цель:</string>
    <string name="no_target">Чтобы достичь цели, нужно ее создать.</string>
    <string name="add_target_text">Поставь новую цель</string>
    <string name="target_list">Список целей</string>
    <string name="send_to">отправить…</string>
    <string name="new_target_is_add">Новая цель добавлена</string>
    <string name="target_is_rpt">Такая цель уже есть в списке</string>
    <string name="loadingTarget">Loading targets</string>
    <string name="testTarget">Чтобы Тебя заметили Боги, нужно быть впереди!</string>
    <string name="editTarget">ИЗМЕНИТЬ</string>
    <string name="delete_target">УДАЛИТЬ</string>
    <string name="target_image">Изображение цели</string>
    <string name="testDate">16.03.22</string>
    <string name="take_photo">Сделать фото</string>
    <string name="choose_photo">выбрать</string>
    <string name="target_is_empty">Нет цели - нет пути!</string>
    <string name="Dismiss">Закрыть</string>
</resources>