<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTargetFragment">

    <TextView
        android:id="@+id/add_target_textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_target_text"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/image_block_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/add_target_textView">

        <ImageView
            android:id="@+id/main_image_imageView"
            style="@style/Theme.TargetProject_v2.ImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/target_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/take_photo_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/take_photo"
                app:icon="@android:drawable/ic_menu_camera" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/take_image_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/choose_photo"
                app:icon="@android:drawable/ic_menu_report_image" />
        </LinearLayout>

    </LinearLayout>


    <EditText
        android:id="@+id/addTarget_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/testTarget"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/image_block_linear_layout" />

    <Button
        android:id="@+id/delete_all_targets_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/delete_target"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addTarget_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>